# django-productapp

./: .dockerignore  .env.example  .flake8  .gitignore  Makefile  entrypoint.sh  pyproject.toml
core/api/: __init__.py  filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py
core/api/v1/products/: handlers.py  schemas.py
core/api/v1/reviews/: handlers.py  schemas.py
core/app/common/: enums.py
core/app/customers/: admin.py  apps.py  entities.py  models.py
core/app/customers/exceptions/: codes.py  customers.py
core/app/customers/migrations/: 0001_initial.py
core/app/customers/services/: auth.py  codes.py  customers.py  senders.py
core/app/products/: admin.py  apps.py
core/app/products/entities/: reviews.py
core/app/products/exceptions/: products.py  reviews.py
core/app/products/migrations/: 0001_initial.py
core/app/products/models/: products.py  reviews.py
core/app/products/services/: products.py  reviews.py
core/apps/common/: exception.py  models.py  use_cases.py
core/apps/customers/: admin.py  apps.py  models.py
core/apps/customers/exception/: codes.py
core/apps/customers/migrations/: 0002_alter_customer_options_alter_customer_token.py
core/apps/customers/services/: auth.py  codes.py  customers.py  senders.py
core/apps/products/: admin.py  containers.py
core/project/: asgi.py  containers.py  urls.py  wsgi.py
core/project/settings/: main.py
docker_compose/: app.yaml  monitoring.yaml  storages.yaml
tests/factories/: products.py
tests/services/: conftest.py  test_products.py
(+11 files in other folders)
