[tool.poetry]
name = "productapi"
version = "0.1.0"
description = ""
authors = ["namig41 <guseinovnamig41@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
psycopg2 = "^2.9.10"
django-environ = "^0.11.2"
django-ninja = "^1.3.0"
pre-commit = "^4.0.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
